# Szakdolgozat_2022

./: README.md
program/: CMakeLists.txt
program/src/: Engine.h  main.cpp
program/src/Components/: Core.h
program/src/Components/Core/: Anim.cpp  Anim.h  BoundaryBox.cpp  BoundaryBox.h  Camera.cpp  Camera.h  Collision.cpp  Collision.h  Creature.h  GameObject.h  Globals.cpp  Globals.h  Hitbox.cpp  Hitbox.h  Projectile.cpp  Projectile.h  Scene.h  Timer.cpp  Timer.h
program/src/Components/Objects/: Healthbar.cpp  Healthbar.h  Level.cpp  Level.h  Player.cpp  Player.h
program/src/Components/Objects/Decor/: Candle.cpp  Candle.h  Fire.cpp  Fire.h
program/src/Components/Objects/NPC/: Possessed.cpp  Possessed.h  Warrior.cpp  Warrior.h
program/src/Components/UI/: Button.h  Label.cpp  Label.h
program/src/Controllers/: Controller.cpp
program/src/Views/: MainScene.cpp  MainScene.h  MenuScene.cpp  MenuScene.h
